# ferrite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  diesel.toml  docker-compose.yml
.github/: copilot-instructions.md
migrations/20251011120000_create_users_and_notes/: down.sql  up.sql
safe-backend/: Cargo.toml
src/: db.rs  errors.rs  logging.rs  main.rs  schema.rs
src/models/: mod.rs  note.rs  user.rs
src/routes/: auth.rs  mod.rs  notes.rs
src/security/: auth.rs  headers.rs  json.rs  mod.rs  rate_limit.rs
