[package]
name = "ferrite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
argon2 = "0.5"
jsonwebtoken = "9"
diesel = { version = "2.2.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
"diesel-async" = { version = "0.7.3", features = ["postgres", "tokio-postgres"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
